# farming-game

./: .env.backup  .gitignore  .nojekyll  BOT_SETUP.md  CNAME  CONTRIBUTING.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  DOMAIN_SETUP.md  FINAL_SETUP.md  FIX_GITHUB_DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  GITHUB_PAGES_SUMMARY.md  GITHUB_SETUP.md  LICENSE  QUICK_GITHUB_PAGES.md  QUICK_REPLACE_GUIDE.md  QUICK_TELEGRAM_SETUP.md  README.md  REPLACE_OLD_PROJECT.md  SETUP_SUMMARY.md  TELEGRAM_MINI_APP_SETUP.md  TELEGRAM_SETUP_SUMMARY.md  bot.py  cert.pem  config.py  config_local.py  database.py  env_example.txt  farming  game_logic.py  https_server.py  index.html  key.pem  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py  run.py  setup_git.py  (+11 more)
.github/workflows/: deploy.yml  gh-pages.yml  pages.yml  test-deploy.yml  test.yml
docs/: .nojekyll  README.md  __init__.py  index.html  telegram-app.html
templates/: __init__.py  index.html
tests/: __init__.py  test_game_logic.py
